--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -172,6 +172,7 @@
     <string name="helpNewTracker">Var hittar jag <b>GPS-spårarens mobil-</b> och <b>IMEI-nummer</b>?</string>
     <string name="isPlacedOnTheBack">finns på baksidan av din GPS-spårare.</string>
     <string name="pauseSubscription">Pausa prenumerationen</string>
+    <string name="intro_step_5">Tryck på den lilla cirkeln till höger om din GPS-spårare för att markera den. </string>
 
 
 </resources>
