update sms and signal frequency

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -248,37 +248,31 @@
 
 
     <string-array name="receiveSignalTime">
-
         <item>20 sekunder</item>
-
         <item>30 sekunder</item>
-
         <item>40 sekunder</item>
-
         <item>50 sekunder</item>
-
         <item>1 minut</item>
-
         <item>2 minutter</item>
-
         <item>3 minutter</item>
-
         <item>5 minutter</item>
-
         <item>7 minutter</item>
-
         <item>10 minutter</item>
-
         <item>20 minutter</item>
-
         <item>30 minutter</item>
-
         <item>40 minutter</item>
-
         <item>50 minutter</item>
-
         <item>60 minutter</item>
+    </string-array>
 
+    <string-array name="receiveSignalTimeDog">
+        <item>20 sekunder</item>
+        <item>30 sekunder</item>
+        <item>40 sekunder</item>
+        <item>50 sekunder</item>
+        <item>1 minut</item>
+        <item>2 minutter</item>
+        <item>3 minutter</item>
     </string-array>
 
 
