--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -155,6 +155,16 @@
         <item>60 minuter</item>
     </string-array>
 
+    <string-array name="receiveSignalTimeDog">
+        <item>20 sekunder</item>
+        <item>30 sekunder</item>
+        <item>40 sekunder</item>
+        <item>50 sekunder</item>
+        <item>1 minut</item>
+        <item>2 minuter</item>
+        <item>3 minuter</item>
+    </string-array>
+
 
     <string-array name="receiveSignalMeasure">
         <item>Sekunder</item>
