--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,16 @@
         <item>60 minutes</item>
     </string-array>
 
+    <string-array name="receiveSignalTimeDog">
+        <item>20 seconds</item>
+        <item>30 seconds</item>
+        <item>40 seconds</item>
+        <item>50 seconds</item>
+        <item>1 minute</item>
+        <item>2 minutes</item>
+        <item>3 minutes</item>
+    </string-array>
+
     <string-array name="receiveSignalTimeValues" translatable="false">
         <item>20</item>
         <item>30</item>
