--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -309,6 +309,8 @@
     <string name="isPlacedOnTheBack">sijaitsee paikantimen takakuoressa</string>
     <string name="pauseSubscription">Keskeytä Tilaus</string>
     <string name="intro_step_5">Napauta paikantimen oikealla puolella sijaitsevaa pientä ympyrää sen merkitsemistä varten.</string>
+    <string name="checkBattery">Tarkista akun</string>
+    <string name="sleepMode">Nukkumismoodi</string>
 
 
 </resources>
