--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,8 @@
     <string name="faq">Troubleshooting</string>
     <string name="sleepMode">Sleep mode</string>
     <string name="checkBattery">Check Battery</string>
+    <string name="updateTracker">You need to update the tracker with new ip-adress for it to work. Please press button and send the preprogrammed SMS to the tracker</string>
+
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
         <item>30 seconds</item>
