--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,16 @@
         <item>3 minutes</item>
     </string-array>
 
+    <string-array name="receiveSignalTimeDogValues">
+        <item>20</item>
+        <item>30 </item>
+        <item>40 </item>
+        <item>50 </item>
+        <item>60</item>
+        <item>120</item>
+        <item>180</item>
+    </string-array>
+
     <string-array name="receiveSignalTimeValues" translatable="false">
         <item>20</item>
         <item>30</item>
@@ -202,6 +212,98 @@
         <item>15 minutes</item>
         <item>30 minutes</item>
         <item>60 minutes</item>
+    </string-array>
+
+    <string-array name="receiveSignalTimeLK330" translatable="false">
+        <item>1 hour</item>
+        <item>2 hours</item>
+        <item>3 hours</item>
+        <item>4 hours</item>
+        <item>5 hours</item>
+        <item>6 hours</item>
+        <item>7 hours</item>
+        <item>8 hours</item>
+        <item>9 hours</item>
+        <item>10 hours</item>
+        <item>11 hours</item>
+        <item>12 hours</item>
+        <item>13 hours</item>
+        <item>14 hours</item>
+        <item>15 hours</item>
+        <item>16 hours</item>
+        <item>17 hours</item>
+        <item>18 hours</item>
+        <item>19 hours</item>
+        <item>20 hours</item>
+        <item>21 hours</item>
+        <item>22 hours</item>
+        <item>23 hours</item>
+        <item>24 hours</item>
+    </string-array>
+
+    <string-array name="receiveSignalTimeLK330Values" translatable="false">
+        <item>3600</item>
+        <item>7200</item>
+        <item>10800</item>
+        <item>14400</item>
+        <item>18000</item>
+        <item>21600</item>
+        <item>25200</item>
+        <item>28800</item>
+        <item>32400</item>
+        <item>36000</item>
+        <item>39600</item>
+        <item>43200</item>
+        <item>46800</item>
+        <item>50400</item>
+        <item>54000</item>
+        <item>57600</item>
+        <item>61200</item>
+        <item>64800</item>
+        <item>68400</item>
+        <item>72000</item>
+        <item>75600</item>
+        <item>79200</item>
+        <item>82800</item>
+        <item>86400</item>
+    </string-array>
+
+    <string-array name="receiveSignalTimeS1Values">
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+        <item>60</item>
+        <item>120</item>
+        <item>180</item>
+        <item>300</item>
+        <item>600</item>
+    </string-array>
+
+    <string-array name="receiveSignalTimeS1">
+        <item>10 seconds</item>
+        <item>20 seconds</item>
+        <item>30 seconds</item>
+        <item>40 seconds</item>
+        <item>50 seconds</item>
+        <item>1 minute</item>
+        <item>2 minutes</item>
+        <item>3 minutes</item>
+        <item>5 minutes</item>
+        <item>10 minutes</item>
+    </string-array>
+
+    <string-array name="geofenceValues" translatable="false">
+        <item>500</item>
+        <item>1000</item>
+        <item>2000</item>
+    </string-array>
+
+    <string-array name="geofenceKeys" translatable="false">
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
     </string-array>
 
 </resources>
