[chg] moved button start/stop to EditTrackerFragment. refactoring code.

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -107,6 +107,8 @@
 
     <string name="editTracker">Rediger\nsporingsenhed</string>
 
+    <string name="editTrackerToolbar">Rediger Sporingsenhed</string>
+
     <string name="update">Opdater</string>
 
     <string name="friends">Venner</string>
