--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -107,6 +107,8 @@
 
     <string name="editTracker">Muokkaa\npaikanninta</string>
 
+    <string name="editTrackerToolbar">Muokkaa Paikanninta</string>
+
     <string name="update">Päivitä</string>
 
     <string name="friends">Kaverit</string>
