[chh] fixed string-resources, added stop/start button to EditFragment. added images for layout.

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -127,7 +127,7 @@
 
     <string name="nameCanNotBeEmpty">Navnet kan ikke være tomt</string>
 
-    <string name="fullName">Fulde navn</string>
+    <string name="fullName">Navn</string>
 
     <string name="satellite">Satelit</string>
 
