--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="selectYourTracker">Select your tracker:</string>
     <string name="wait">Please, wait…</string>
     <string name="nameCanNotBeEmpty">Name can not be empty</string>
-    <string name="fullName">Full Name</string>
+    <string name="fullName">Name</string>
     <string name="satellite">Satellite</string>
     <string name="standard">Standard</string>
     <string name="topo">Topo</string>
@@ -141,7 +141,7 @@
     <string name="address">Address</string>
     <string name="country">Country</string>
     <string name="city">City</string>
-    <string name="zipCode">Zip Code</string>
+    <string name="zipCode">Postcode</string>
     <string name="addressCanNotBeEmpty">Address can not be empty</string>
     <string name="cityCanNotBeEmpty">City can not be empty</string>
     <string name="countryCanNotBeEmpty">Country can not be empty</string>
