[chg] added images. fixed xml-resources. fixed string-resources.

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -117,7 +117,7 @@
 
     <string name="removeFriend">Fjern\nven</string>
 
-    <string name="search">Søg</string>
+    <string name="search">Søg personer</string>
 
     <string name="selectTracker">Vælg Sporingsenhed som du ønsker at aktivere:</string>
 
