--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -117,7 +117,7 @@
 
     <string name="removeFriend">Poista\nkaveri</string>
 
-    <string name="search">Etsi</string>
+    <string name="search">Etsi ihmisiä</string>
 
     <string name="selectTracker">Valitse paikannin, jonka haluat aktivoida:</string>
 
