--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -57,7 +57,7 @@
     <string name="friends">Venner</string>
     <string name="addFriend">Legg til venn</string>
     <string name="removeFriend">Slett \n venn</string>
-    <string name="search">Søk</string>
+    <string name="search">Søk folk</string>
     <string name="selectTracker">Velg traker du vil aktivere:</string>
     <string name="selectYourTracker">Velg sporing:</string>
     <string name="wait">Vennligst vent</string>
