--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -57,7 +57,7 @@
     <string name="friends">Vänner</string>
     <string name="addFriend">Lägg till vän</string>
     <string name="removeFriend">Ta bort vän\avvänna</string>
-    <string name="search">Sök</string>
+    <string name="search">Sök personer</string>
     <string name="selectTracker">Välj GPS-spårare som du vill aktivera:</string>
     <string name="selectYourTracker">Välj din spårare:</string>
     <string name="wait">Vänta…</string>
