--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -139,6 +139,9 @@
     <string name="zipCodeCanNotBeEmpty">Vennligst legg inn postnr</string>
     <string name="skip"><u>Hopp over</u></string>
     <string name="updateTracker">Du trenger å oppdatere appen med ny ip-adresse for at trackeren skal fungere. Trykk på knappen under og send SMS til trackeren for å oppdatere.</string>
+    <string name="select_image">Velg bilde</string>
+    <string name="delete_image">Slett bilde</string>
+    <string name="could_not_upload_image">Kunne ikke laste opp bilde</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
