--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -178,13 +178,13 @@
 
     <string name="trackerImeiNMap">IMEI-numero:\t\t\t%1$s</string>
 
-    <string name="logTimeNMap">Seuraa Aikaa:\t\t\t\t%1$s</string>
+    <string name="logTimeNMap">Viimeksi nähty\t%1$s</string>
 
     <string name="latNMap">Leveysaste:\t\t\t%1$s</string>
 
     <string name="lonNMap">Pituusaste:\t\t\t%1$s</string>
 
-    <string name="grsmNMap">GRSM:\t%1$s</string>
+    <string name="grsmNMap">GRSM\t%1$s</string>
 
     <string name="you">Sinä</string>
 
