[chg] added logic for display battery charge level

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="speedInfo">%1$s km/h</string>
     <string name="distanceInfo">%1$s km</string>
     <string name="distanceTravelledInfo">%1$s km</string>
+    <string name="chargeInfo">%1$s %%</string>
 
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
