[chg] added uploading photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,7 @@
     <string name="distanceInfo">%1$s km</string>
     <string name="distanceTravelledInfo">%1$s km</string>
     <string name="chargeInfo">%1$s %%</string>
+    <string name="choosePhoto">Upload your photo</string>
 
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
