--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -145,6 +145,7 @@
     <string name="permission_denied_info">Utan detta tillstånd kommer inte programmet att fungera</string>
     <string name="allow">Tillåta</string>
     <string name="imsure">Jag är säker</string>
+    <string name="choosePhoto">Ladda upp ditt foto</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
